cluster/deployments/kubernetes-dashboard/kubernetes-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  labels:
  annotations:
    cert-manager.io/cluster-issuer: vault-clusterissuer
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.myk8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: kubernetes-dashboard
            port:
              number: 443
  tls:
  - hosts:
    - dashboard.myk8s.net
    secretName: kubernetes-dashboard-ingress-cert
